# audiomark

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.c
.github/workflow/: build.yml
.github/workflows/: build.yml  cmsis-audiomark-build-run.yml
application_demo/: audiomark.c  main.c  public.h
application_demo/debug_data/: Noise.raw  asr_input.raw  left0.raw  left0.txt  left2.txt  noise.txt  right0.raw  right0.txt  right2.txt
application_demo/windows/: hard_coded_demo.c  main.c
components/eembc/: ee_abf.c  ee_abf.h  ee_abf_f32.c  ee_abf_f32.h  ee_abf_f32_tables.c  ee_abf_tables.c  ee_api.h  ee_kws.c  ee_mfcc.c  ee_mfcc.h  ee_mfcc_f32.c  ee_mfcc_f32.h  ee_mfcc_f32_tables.c  ee_mfcc_f32_tables.h  ee_mfccdata.c  ee_mfccdata.h  ee_nn.c  ee_nn_weights.h  ee_types.h  th_api.c  todo.txt
components/xiph/: SpeexDSP-1.2.1.txt  xiph_swc.h
lib/: README.md
lib/NN/Include/: arm_nnfunctions.h
lib/speexdsp/: speex_kernels.h
lib/speexdsp/include/: Makefile.in
lib/speexdsp/libspeexdsp/: Makefile.in  arch.h  arm_libspeex_kernels.c  buffer.c  fftwrap.c  filterbank.c  filterbank_opt.c  filterbank_opt_generic.c  filterbank_opt_helium.c  fixed_debug.h  fixed_generic.h  math_approx.h  mdf.c  mdf_opt.c  mdf_opt_generic.c  mdf_opt_helium.c  preprocess.c  preprocess_opt.c  preprocess_opt_generic.c  preprocess_opt_helium.c  resample.c  scal.c  testresample2
lib/th_api/CMSIS/: README.md
libraries/DSP/Include/: arm_math.h  arm_math_types.h
libraries/NN/Include/: arm_nn_math_types.h
libraries/eembc/: ee_types.h  th_types.h
platform/: README.md
platform/arm_mvdk_fvp/: EEMBC_AUDIOMARK.uvoptx  EEMBC_AUDIOMARK.uvprojx
platform/cmake/: CMakeLists.txt
platform/cmsis/: README.md  arm_ethosu_npu_init.cpp  arm_ethosu_npu_init.hpp  audiomark.cbuild-idx.yml  audiomark.csolution.yml  audiomark_app.Release+FVP.cbuild.yml  audiomark_app.Release+MPS2-CMSDK_CM4_FP.cprj  audiomark_app.Release+MPS2-CMSDK_CM7_SP.cprj  audiomark_app.Release+MPS2-IOTKit-CM33.cprj  audiomark_app.Release+MPS3-Corstone-300.cbuild.yml  audiomark_app.Release+MPS3-Corstone-300.cprj  audiomark_app.Release+MPS3-Corstone-300.uvoptx  audiomark_app.Release+MPS3-Corstone-300.uvprojx  audiomark_app.Release+MPS3-Corstone-310.cbuild.yml  audiomark_app.Release+MPS3-Corstone-310.cprj  audiomark_app.Release+VHT-Corstone-300.cbuild.yml  audiomark_app.Release+VHT-Corstone-300.cprj  audiomark_app.Release+VHT-Corstone-310.cbuild.yml  audiomark_app.Release+VHT-Corstone-310.cprj  audiomark_app.Release+VHT_M85.cbuild.yml  audiomark_app.Release+VHT_M85.cprj  audiomark_app.cproject.yml  audiomark_core.clayer.yml  boot.clayer.yml  cdefault.yml  ethos_tfmicro.clayer.yml  fvp_shutdown.c  model_config_sse300.txt  model_config_sse310.txt  platform_init.c  printf_mpsx.clayer.yml  speex.clayer.yml  stdout_USART.c  testabf.Release+FVP.cbuild.yml  testabf.Release+MPS2-CMSDK_CM4_FP.cprj  testabf.Release+MPS2-CMSDK_CM7_SP.cprj  testabf.Release+MPS2-IOTKit-CM33.cprj  testabf.Release+MPS3-Corstone-300.cbuild.yml  testabf.Release+MPS3-Corstone-300.cprj  testabf.Release+MPS3-Corstone-310.cbuild.yml  (+69 more)
platform/cmsis/audiomark_app/: audiomark_app.Release+Ethos-MPS3-Corstone-300.cprj  audiomark_app.Release+Ethos-MPS3-Corstone-300.uvoptx  audiomark_app.Release+Ethos-MPS3-Corstone-300.uvprojx  audiomark_app.Release+Ethos-MPS3-Corstone-310.cprj  audiomark_app.Release+Ethos-MPS3-Corstone-310.uvoptx  audiomark_app.Release+Ethos-MPS3-Corstone-310.uvprojx  audiomark_app.Release+MPS2-CMSDK_CM4_FP.cbuild.yml  audiomark_app.Release+MPS2-CMSDK_CM4_FP.cprj  audiomark_app.Release+MPS2-CMSDK_CM7_SP.cbuild.yml  audiomark_app.Release+MPS2-CMSDK_CM7_SP.cprj  audiomark_app.Release+MPS2-IOTKit-CM33.cbuild.yml  audiomark_app.Release+MPS2-IOTKit-CM33.cprj  audiomark_app.Release+MPS3-Corstone-300.cbuild.yml  audiomark_app.Release+MPS3-Corstone-300.cprj  audiomark_app.Release+MPS3-Corstone-310.cbuild.yml  audiomark_app.Release+MPS3-Corstone-310.cprj  audiomark_app.Release+VHT-Corstone-300.cbuild.yml  audiomark_app.Release+VHT-Corstone-300.cprj  audiomark_app.Release+VHT-Corstone-310.cbuild.yml  audiomark_app.Release+VHT-Corstone-310.cprj  audiomark_app.Release+VHT_M85.cbuild.yml  audiomark_app.Release+VHT_M85.cprj  audiomark_app.cproject.yml
platform/cmsis/fvp_sse300_mps3_ns_sct/: fvp_sse300_mps3_ns.sct  region_defs.h  region_limits.h  scatter.scat
platform/cmsis/missing_from_packs/: README.txt
platform/cmsis/testabf/: testabf.Release+Ethos-MPS3-Corstone-300.cprj  testabf.Release+MPS2-CMSDK_CM4_FP.cbuild.yml  testabf.Release+MPS2-CMSDK_CM4_FP.cprj  testabf.Release+MPS2-CMSDK_CM7_SP.cbuild.yml  testabf.Release+MPS2-CMSDK_CM7_SP.cprj  testabf.Release+MPS2-IOTKit-CM33.cbuild.yml  testabf.Release+MPS2-IOTKit-CM33.cprj  testabf.Release+MPS3-Corstone-300.cbuild.yml  testabf.Release+MPS3-Corstone-300.cprj  testabf.Release+VHT_M85.cbuild.yml  (+8 more)
ports/arm/: ds_cnn_model.cpp  ds_cnn_s_quantized.tflite.cpp  ds_cnn_s_quantized_U55_128_vela.tflite.cpp  ds_cnn_s_quantized_U55_256_vela.tflite.cpp  ds_cnn_s_quantized_U55_32_vela.tflite.cpp  ds_cnn_s_quantized_U55_64_vela.tflite.cpp  ds_cnn_s_quantized_U65_256_vela.tflite.cpp  port.cmake  run_cmsis_nn.cpp  run_ethosu.cpp  th_api.c  th_types.h
ports/barebones/: port.cmake  th_api.c  th_types.h
src/: ee_abf_f32.c  ee_abf_f32.h  ee_abf_f32_tables.c  ee_abf_f32_tables.h  ee_aec_f32.c  ee_anr_f32.c  ee_api.h  ee_audiomark.c  ee_audiomark.h  ee_data.h  ee_kws.c  ee_kws.h  ee_main.c  ee_mfcc_f32.c  ee_mfcc_f32.h  ee_mfcc_f32_tables.c  ee_mfcc_f32_tables.h  ee_nn.h  ee_nn_tables.c  ee_nn_weights.h  ee_types.h  main.c  th_api.c  th_types.h
src/ee_data/: README.md  ee_data.h  left0.txt  noise.txt  right0.txt
tests/: kws_data.h  mfcc_data.h  nn_data.h  test_abf_f32.c  test_aec_f32.c  test_anr_f32.c  test_kws.c  test_mfcc.c  test_mfcc_f32.c  test_nn.c
tests/data/: abf_f32_expected.c  abf_f32_expected_test_data.c  abf_f32_input_ch1.c  abf_f32_input_ch2.c  aec_f32_expected.c  aec_f32_input_echo.c  aec_f32_input_source.c  anr_f32_expected.c  anr_f32_input.c  kws_expected.c  kws_input.c  left0.raw  mfcc_f32_all.c  right0.raw
(+302 files in other folders)
